@@ -1,31 +1,18 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.cluster.metadata;
 
 import org.elasticsearch.Version;
-import org.elasticsearch.action.admin.indices.close.CloseIndexClusterStateUpdateRequest;
 import org.elasticsearch.action.admin.indices.close.CloseIndexResponse;
 import org.elasticsearch.action.admin.indices.close.CloseIndexResponse.IndexResult;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.DataStreamTestHelper;
 import org.elasticsearch.cluster.RestoreInProgress;
 import org.elasticsearch.cluster.SnapshotsInProgress;
 import org.elasticsearch.cluster.block.ClusterBlock;
@@ -36,31 +23,25 @@ import org.elasticsearch.cluster.routing.RoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.UnassignedInfo;
-import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Nullable;
-import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.collect.ImmutableOpenMap;
-import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.repositories.IndexId;
+import org.elasticsearch.repositories.ShardGeneration;
 import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInProgressException;
-import org.elasticsearch.snapshots.SnapshotInfoTests;
+import org.elasticsearch.snapshots.SnapshotInfoTestUtils;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.VersionUtils;
-import org.hamcrest.CoreMatchers;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -80,8 +61,6 @@ import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.notNullValue;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class MetadataIndexStateServiceTests extends ESTestCase {
 
@@ -133,14 +112,14 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         String indexName = "restored-index";
         ClusterBlock block = MetadataIndexStateService.createIndexClosingBlock();
         state = addRestoredIndex(indexName, randomIntBetween(1, 5), randomIntBetween(0, 5), state);
-        state = ClusterState.builder(state)
-            .blocks(ClusterBlocks.builder().blocks(state.blocks()).addIndexBlock(indexName, block))
-            .build();
+        state = ClusterState.builder(state).blocks(ClusterBlocks.builder().blocks(state.blocks()).addIndexBlock(indexName, block)).build();
 
         final Index index = state.metadata().index(indexName).getIndex();
-        final ClusterState updatedState =
-            MetadataIndexStateService.closeRoutingTable(state, singletonMap(index, block), singletonMap(index, new IndexResult(index)))
-                .v1();
+        final ClusterState updatedState = MetadataIndexStateService.closeRoutingTable(
+            state,
+            singletonMap(index, block),
+            singletonMap(index, new IndexResult(index))
+        ).v1();
         assertIsOpened(index.getName(), updatedState);
         assertThat(updatedState.blocks().hasIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID), is(true));
     }
@@ -151,14 +130,14 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         String indexName = "snapshotted-index";
         ClusterBlock block = MetadataIndexStateService.createIndexClosingBlock();
         state = addSnapshotIndex(indexName, randomIntBetween(1, 5), randomIntBetween(0, 5), state);
-        state = ClusterState.builder(state)
-            .blocks(ClusterBlocks.builder().blocks(state.blocks()).addIndexBlock(indexName, block))
-            .build();
+        state = ClusterState.builder(state).blocks(ClusterBlocks.builder().blocks(state.blocks()).addIndexBlock(indexName, block)).build();
 
         final Index index = state.metadata().index(indexName).getIndex();
-        final ClusterState updatedState =
-            MetadataIndexStateService.closeRoutingTable(state, singletonMap(index, block), singletonMap(index, new IndexResult(index)))
-                .v1();
+        final ClusterState updatedState = MetadataIndexStateService.closeRoutingTable(
+            state,
+            singletonMap(index, block),
+            singletonMap(index, new IndexResult(index))
+        ).v1();
         assertIsOpened(index.getName(), updatedState);
         assertThat(updatedState.blocks().hasIndexBlockWithId(index.getName(), INDEX_CLOSED_BLOCK_ID), is(true));
     }
@@ -167,9 +146,11 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         final ClusterState initialState = ClusterState.builder(new ClusterName("testAddIndexClosedBlocks")).build();
         {
             final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
-            Index[] indices = new Index[]{new Index("_name", "_uid")};
-            expectThrows(IndexNotFoundException.class, () ->
-                MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, initialState));
+            Index[] indices = new Index[] { new Index("_name", "_uid") };
+            expectThrows(
+                IndexNotFoundException.class,
+                () -> MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, initialState)
+            );
             assertTrue(blockedIndices.isEmpty());
         }
         {
@@ -183,7 +164,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         {
             final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
             ClusterState state = addClosedIndex("closed", randomIntBetween(1, 3), randomIntBetween(0, 3), initialState);
-            Index[] indices = new Index[]{state.metadata().index("closed").getIndex()};
+            Index[] indices = new Index[] { state.metadata().index("closed").getIndex() };
 
             ClusterState updatedState = MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, state);
             assertSame(state, updatedState);
@@ -193,7 +174,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
             final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
             ClusterState state = addClosedIndex("closed", randomIntBetween(1, 3), randomIntBetween(0, 3), initialState);
             state = addOpenedIndex("opened", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
-            Index[] indices = new Index[]{state.metadata().index("opened").getIndex(), state.metadata().index("closed").getIndex()};
+            Index[] indices = new Index[] { state.metadata().index("opened").getIndex(), state.metadata().index("closed").getIndex() };
 
             ClusterState updatedState = MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, state);
             assertNotSame(state, updatedState);
@@ -207,16 +188,16 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         }
         {
             IllegalArgumentException exception = expectThrows(IllegalArgumentException.class, () -> {
-                    ClusterState state = addRestoredIndex("restored", randomIntBetween(1, 3), randomIntBetween(0, 3), initialState);
-                    if (randomBoolean()) {
-                        state = addOpenedIndex("opened", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
-                    }
-                    if (randomBoolean()) {
-                        state = addOpenedIndex("closed", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
-                    }
-                    Index[] indices = new Index[]{state.metadata().index("restored").getIndex()};
-                    MetadataIndexStateService.addIndexClosedBlocks(indices, unmodifiableMap(emptyMap()), state);
-                });
+                ClusterState state = addRestoredIndex("restored", randomIntBetween(1, 3), randomIntBetween(0, 3), initialState);
+                if (randomBoolean()) {
+                    state = addOpenedIndex("opened", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
+                }
+                if (randomBoolean()) {
+                    state = addOpenedIndex("closed", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
+                }
+                Index[] indices = new Index[] { state.metadata().index("restored").getIndex() };
+                MetadataIndexStateService.addIndexClosedBlocks(indices, unmodifiableMap(emptyMap()), state);
+            });
             assertThat(exception.getMessage(), containsString("Cannot close indices that are being restored: [[restored]]"));
         }
         {
@@ -228,7 +209,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
                 if (randomBoolean()) {
                     state = addOpenedIndex("closed", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
                 }
-                Index[] indices = new Index[]{state.metadata().index("snapshotted").getIndex()};
+                Index[] indices = new Index[] { state.metadata().index("snapshotted").getIndex() };
                 MetadataIndexStateService.addIndexClosedBlocks(indices, unmodifiableMap(emptyMap()), state);
             });
             assertThat(exception.getMessage(), containsString("Cannot close indices that are being snapshotted: [[snapshotted]]"));
@@ -242,7 +223,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
             Index index1 = state.metadata().index("index-1").getIndex();
             Index index2 = state.metadata().index("index-2").getIndex();
             Index index3 = state.metadata().index("index-3").getIndex();
-            Index[] indices = new Index[]{index1, index2, index3};
+            Index[] indices = new Index[] { index1, index2, index3 };
 
             ClusterState updatedState = MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, state);
             assertNotSame(state, updatedState);
@@ -259,7 +240,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         state = addOpenedIndex("test", randomIntBetween(1, 3), randomIntBetween(0, 3), state);
 
         Index test = state.metadata().index("test").getIndex();
-        Index[] indices = new Index[]{test};
+        Index[] indices = new Index[] { test };
 
         final Map<Index, ClusterBlock> blockedIndices = new HashMap<>();
         state = MetadataIndexStateService.addIndexClosedBlocks(indices, blockedIndices, state);
@@ -292,10 +273,12 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
             IndexMetadata indexMetadata = IndexMetadata.builder(indexName)
                 .state(IndexMetadata.State.CLOSE)
                 .creationDate(randomNonNegativeLong())
-                .settings(Settings.builder()
-                    .put(SETTING_VERSION_CREATED, Version.CURRENT)
-                    .put(SETTING_NUMBER_OF_SHARDS, randomIntBetween(1, 3))
-                    .put(SETTING_NUMBER_OF_REPLICAS, randomIntBetween(0, 3)))
+                .settings(
+                    Settings.builder()
+                        .put(SETTING_VERSION_CREATED, Version.CURRENT)
+                        .put(SETTING_NUMBER_OF_SHARDS, randomIntBetween(1, 3))
+                        .put(SETTING_NUMBER_OF_REPLICAS, randomIntBetween(0, 3))
+                )
                 .build();
             assertFalse(MetadataIndexStateService.isIndexVerifiedBeforeClosed(indexMetadata));
         }
@@ -311,7 +294,7 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
             String indexName = "test-" + i;
             state = addOpenedIndex(indexName, randomIntBetween(1, 3), randomIntBetween(0, 3), state);
             Index index = state.metadata().index(indexName).getIndex();
-            state = MetadataIndexStateService.addIndexClosedBlocks(new Index[]{index}, blockedIndices, state);
+            state = MetadataIndexStateService.addIndexClosedBlocks(new Index[] { index }, blockedIndices, state);
             if (randomBoolean()) {
                 state = ClusterState.builder(state)
                     .blocks(ClusterBlocks.builder().blocks(state.blocks()).removeIndexBlocks(indexName).build())
@@ -320,40 +303,17 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
             }
             verifyResults.put(index, new IndexResult(index));
         }
-        Collection<IndexResult> closingResults =
-            MetadataIndexStateService.closeRoutingTable(state, blockedIndices, unmodifiableMap(verifyResults)).v2();
+        Collection<IndexResult> closingResults = MetadataIndexStateService.closeRoutingTable(
+            state,
+            blockedIndices,
+            unmodifiableMap(verifyResults)
+        ).v2();
         assertThat(closingResults, hasSize(numIndices));
-        Set<Index> failedIndices = closingResults.stream().filter(IndexResult::hasFailures)
-            .map(IndexResult::getIndex).collect(Collectors.toSet());
+        Set<Index> failedIndices = closingResults.stream()
+            .filter(IndexResult::hasFailures)
+            .map(IndexResult::getIndex)
+            .collect(Collectors.toSet());
         assertThat(failedIndices, equalTo(disappearedIndices));
-    }
-
-    public void testCloseCurrentWriteIndexForDataStream() {
-        int numDataStreams = randomIntBetween(1, 3);
-        List<Tuple<String, Integer>> dataStreamsToCreate = new ArrayList<>();
-        List<String> writeIndices = new ArrayList<>();
-        for (int k = 0; k < numDataStreams; k++) {
-            String dataStreamName = randomAlphaOfLength(6).toLowerCase(Locale.ROOT);
-            int numBackingIndices = randomIntBetween(1, 5);
-            dataStreamsToCreate.add(new Tuple<>(dataStreamName, numBackingIndices));
-            writeIndices.add(DataStream.getDefaultBackingIndexName(dataStreamName, numBackingIndices));
-        }
-        ClusterState cs = DataStreamTestHelper.getClusterStateWithDataStreams(dataStreamsToCreate, List.of());
-
-        ClusterService clusterService = mock(ClusterService.class);
-        when(clusterService.state()).thenReturn(cs);
-
-        List<String> indicesToDelete = randomSubsetOf(randomIntBetween(1, numDataStreams), writeIndices);
-        Index[] indicesToDeleteArray = new Index[indicesToDelete.size()];
-        for (int k = 0; k < indicesToDelete.size(); k++) {
-            Index indexToDelete = cs.metadata().index(indicesToDelete.get(k)).getIndex();
-            indicesToDeleteArray[k] = indexToDelete;
-        }
-        MetadataIndexStateService service = new MetadataIndexStateService(clusterService, null, null, null, null, null, null);
-        CloseIndexClusterStateUpdateRequest request = new CloseIndexClusterStateUpdateRequest(0L).indices(indicesToDeleteArray);
-        Exception e = expectThrows(IllegalArgumentException.class, () -> service.closeIndices(request, null));
-        assertThat(e.getMessage(), CoreMatchers.containsString("cannot close the following data stream write indices [" +
-                Strings.collectionToCommaDelimitedString(indicesToDelete) + "]"));
     }
 
     public static ClusterState addOpenedIndex(final String index, final int numShards, final int numReplicas, final ClusterState state) {
@@ -364,8 +324,13 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         return addIndex(state, index, numShards, numReplicas, IndexMetadata.State.CLOSE, INDEX_CLOSED_BLOCK);
     }
 
-    private static ClusterState addBlockedIndex(final String index, final int numShards, final int numReplicas, final ClusterState state,
-                                                final ClusterBlock closingBlock) {
+    private static ClusterState addBlockedIndex(
+        final String index,
+        final int numShards,
+        final int numReplicas,
+        final ClusterState state,
+        final ClusterBlock closingBlock
+    ) {
         return addIndex(state, index, numShards, numReplicas, IndexMetadata.State.OPEN, closingBlock);
     }
 
@@ -378,12 +343,14 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         }
 
         final Snapshot snapshot = new Snapshot(randomAlphaOfLength(10), new SnapshotId(randomAlphaOfLength(5), randomAlphaOfLength(5)));
-        final RestoreInProgress.Entry entry =
-            new RestoreInProgress.Entry("_uuid", snapshot, RestoreInProgress.State.INIT,
-                Collections.singletonList(index), shardsBuilder.build());
-        return ClusterState.builder(newState)
-            .putCustom(RestoreInProgress.TYPE, new RestoreInProgress.Builder().add(entry).build())
-            .build();
+        final RestoreInProgress.Entry entry = new RestoreInProgress.Entry(
+            "_uuid",
+            snapshot,
+            RestoreInProgress.State.INIT,
+            Collections.singletonList(index),
+            shardsBuilder.build()
+        );
+        return ClusterState.builder(newState).putCustom(RestoreInProgress.TYPE, new RestoreInProgress.Builder().add(entry).build()).build();
     }
 
     private static ClusterState addSnapshotIndex(final String index, final int numShards, final int numReplicas, final ClusterState state) {
@@ -391,23 +358,39 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
 
         final ImmutableOpenMap.Builder<ShardId, SnapshotsInProgress.ShardSnapshotStatus> shardsBuilder = ImmutableOpenMap.builder();
         for (ShardRouting shardRouting : newState.routingTable().index(index).randomAllActiveShardsIt()) {
-            shardsBuilder.put(shardRouting.shardId(), new SnapshotsInProgress.ShardSnapshotStatus(shardRouting.currentNodeId(), "1"));
+            shardsBuilder.put(
+                shardRouting.shardId(),
+                new SnapshotsInProgress.ShardSnapshotStatus(shardRouting.currentNodeId(), new ShardGeneration(1L))
+            );
         }
 
         final Snapshot snapshot = new Snapshot(randomAlphaOfLength(10), new SnapshotId(randomAlphaOfLength(5), randomAlphaOfLength(5)));
-        final SnapshotsInProgress.Entry entry =
-            new SnapshotsInProgress.Entry(snapshot, randomBoolean(), false, SnapshotsInProgress.State.INIT,
-                Collections.singletonList(new IndexId(index, index)), Collections.emptyList(), randomNonNegativeLong(), randomLong(),
-                    shardsBuilder.build(), null, SnapshotInfoTests.randomUserMetadata(), VersionUtils.randomVersion(random()));
-        return ClusterState.builder(newState).putCustom(SnapshotsInProgress.TYPE, SnapshotsInProgress.of(List.of(entry))).build();
+        final SnapshotsInProgress.Entry entry = new SnapshotsInProgress.Entry(
+            snapshot,
+            randomBoolean(),
+            false,
+            SnapshotsInProgress.State.INIT,
+            Collections.singletonMap(index, new IndexId(index, index)),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            randomNonNegativeLong(),
+            randomLong(),
+            shardsBuilder.build(),
+            null,
+            SnapshotInfoTestUtils.randomUserMetadata(),
+            VersionUtils.randomVersion(random())
+        );
+        return ClusterState.builder(newState).putCustom(SnapshotsInProgress.TYPE, SnapshotsInProgress.EMPTY.withAddedEntry(entry)).build();
     }
 
-    private static ClusterState addIndex(final ClusterState currentState,
-                                         final String index,
-                                         final int numShards,
-                                         final int numReplicas,
-                                         final IndexMetadata.State state,
-                                         @Nullable final ClusterBlock block) {
+    private static ClusterState addIndex(
+        final ClusterState currentState,
+        final String index,
+        final int numShards,
+        final int numReplicas,
+        final IndexMetadata.State state,
+        @Nullable final ClusterBlock block
+    ) {
 
         final Settings.Builder settings = Settings.builder()
             .put(SETTING_VERSION_CREATED, Version.CURRENT)
@@ -459,24 +442,44 @@ public class MetadataIndexStateServiceTests extends ESTestCase {
         assertThat(indexSettings.hasValue(MetadataIndexStateService.VERIFIED_BEFORE_CLOSE_SETTING.getKey()), is(true));
         assertThat(indexSettings.getAsBoolean(MetadataIndexStateService.VERIFIED_BEFORE_CLOSE_SETTING.getKey(), false), is(true));
         assertThat(clusterState.blocks().hasIndexBlock(indexName, MetadataIndexStateService.INDEX_CLOSED_BLOCK), is(true));
-        assertThat("Index " + indexName + " must have only 1 block with [id=" + MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID + "]",
-            clusterState.blocks().indices().getOrDefault(indexName, emptySet()).stream()
-                .filter(clusterBlock -> clusterBlock.id() == MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID).count(), equalTo(1L));
+        assertThat(
+            "Index " + indexName + " must have only 1 block with [id=" + MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID + "]",
+            clusterState.blocks()
+                .indices()
+                .getOrDefault(indexName, emptySet())
+                .stream()
+                .filter(clusterBlock -> clusterBlock.id() == MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID)
+                .count(),
+            equalTo(1L)
+        );
 
         final IndexRoutingTable indexRoutingTable = clusterState.routingTable().index(indexName);
         assertThat(indexRoutingTable, notNullValue());
 
-        for(IndexShardRoutingTable shardRoutingTable : indexRoutingTable) {
+        for (IndexShardRoutingTable shardRoutingTable : indexRoutingTable) {
             assertThat(shardRoutingTable.shards().stream().allMatch(ShardRouting::unassigned), is(true));
-            assertThat(shardRoutingTable.shards().stream().map(ShardRouting::unassignedInfo).map(UnassignedInfo::getReason)
-                .allMatch(info -> info == UnassignedInfo.Reason.INDEX_CLOSED), is(true));
+            assertThat(
+                shardRoutingTable.shards()
+                    .stream()
+                    .map(ShardRouting::unassignedInfo)
+                    .map(UnassignedInfo::getReason)
+                    .allMatch(info -> info == UnassignedInfo.Reason.INDEX_CLOSED),
+                is(true)
+            );
         }
     }
 
     private static void assertHasBlock(final String indexName, final ClusterState clusterState, final ClusterBlock closingBlock) {
         assertThat(clusterState.blocks().hasIndexBlock(indexName, closingBlock), is(true));
-        assertThat("Index " + indexName + " must have only 1 block with [id=" + MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID + "]",
-            clusterState.blocks().indices().getOrDefault(indexName, emptySet()).stream()
-                .filter(clusterBlock -> clusterBlock.id() == MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID).count(), equalTo(1L));
+        assertThat(
+            "Index " + indexName + " must have only 1 block with [id=" + MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID + "]",
+            clusterState.blocks()
+                .indices()
+                .getOrDefault(indexName, emptySet())
+                .stream()
+                .filter(clusterBlock -> clusterBlock.id() == MetadataIndexStateService.INDEX_CLOSED_BLOCK_ID)
+                .count(),
+            equalTo(1L)
+        );
     }
 }
