@@ -1,20 +1,9 @@
 /*
- * Licensed to Elasticsearch under one or more contributor
- * license agreements. See the NOTICE file distributed with
- * this work for additional information regarding copyright
- * ownership. Elasticsearch licenses this file to you under
- * the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *    http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0 and the Server Side Public License, v 1; you may not use this file except
+ * in compliance with, at your election, the Elastic License 2.0 or the Server
+ * Side Public License, v 1.
  */
 
 package org.elasticsearch.cluster.serialization;
@@ -44,10 +33,10 @@ import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.snapshots.Snapshot;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.test.VersionUtils;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
 import java.util.Arrays;
@@ -62,24 +51,33 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
     public void testClusterStateSerialization() throws Exception {
         Metadata metadata = Metadata.builder()
-                .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
-                .build();
+            .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
+            .build();
 
-        RoutingTable routingTable = RoutingTable.builder()
-                .addAsNew(metadata.index("test"))
-                .build();
+        RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
 
-        DiscoveryNodes nodes = DiscoveryNodes.builder().add(newNode("node1")).add(newNode("node2"))
-            .add(newNode("node3")).localNodeId("node1").masterNodeId("node2").build();
+        DiscoveryNodes nodes = DiscoveryNodes.builder()
+            .add(newNode("node1"))
+            .add(newNode("node2"))
+            .add(newNode("node3"))
+            .localNodeId("node1")
+            .masterNodeId("node2")
+            .build();
 
         ClusterState clusterState = ClusterState.builder(new ClusterName("clusterName1"))
-            .nodes(nodes).metadata(metadata).routingTable(routingTable).build();
+            .nodes(nodes)
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
 
         AllocationService strategy = createAllocationService();
         clusterState = ClusterState.builder(clusterState).routingTable(strategy.reroute(clusterState, "reroute").routingTable()).build();
 
-        ClusterState serializedClusterState = ClusterState.Builder.fromBytes(ClusterState.Builder.toBytes(clusterState), newNode("node1"),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
+        ClusterState serializedClusterState = ClusterState.Builder.fromBytes(
+            ClusterState.Builder.toBytes(clusterState),
+            newNode("node1"),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
 
         assertThat(serializedClusterState.getClusterName().value(), equalTo(clusterState.getClusterName().value()));
 
@@ -88,17 +86,18 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
     public void testRoutingTableSerialization() throws Exception {
         Metadata metadata = Metadata.builder()
-                .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
-                .build();
+            .put(IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1))
+            .build();
 
-        RoutingTable routingTable = RoutingTable.builder()
-                .addAsNew(metadata.index("test"))
-                .build();
+        RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
 
         DiscoveryNodes nodes = DiscoveryNodes.builder().add(newNode("node1")).add(newNode("node2")).add(newNode("node3")).build();
 
-        ClusterState clusterState = ClusterState.builder(ClusterName.CLUSTER_NAME_SETTING.getDefault(Settings.EMPTY)).nodes(nodes)
-            .metadata(metadata).routingTable(routingTable).build();
+        ClusterState clusterState = ClusterState.builder(ClusterName.CLUSTER_NAME_SETTING.getDefault(Settings.EMPTY))
+            .nodes(nodes)
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
 
         AllocationService strategy = createAllocationService();
         RoutingTable source = strategy.reroute(clusterState, "reroute").routingTable();
@@ -116,16 +115,27 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         boolean includeRestore = randomBoolean();
 
         ClusterState.Builder builder = ClusterState.builder(ClusterState.EMPTY_STATE)
-            .putCustom(SnapshotDeletionsInProgress.TYPE,
-                    SnapshotDeletionsInProgress.of(List.of(
-                            new SnapshotDeletionsInProgress.Entry(
-                                    Collections.singletonList(new SnapshotId("snap1", UUIDs.randomBase64UUID())), "repo1",
-                                    randomNonNegativeLong(), randomNonNegativeLong(), SnapshotDeletionsInProgress.State.STARTED))));
+            .putCustom(
+                SnapshotDeletionsInProgress.TYPE,
+                SnapshotDeletionsInProgress.of(
+                    List.of(
+                        new SnapshotDeletionsInProgress.Entry(
+                            Collections.singletonList(new SnapshotId("snap1", UUIDs.randomBase64UUID())),
+                            "repo1",
+                            randomNonNegativeLong(),
+                            randomNonNegativeLong(),
+                            SnapshotDeletionsInProgress.State.STARTED
+                        )
+                    )
+                )
+            );
         if (includeRestore) {
-            builder.putCustom(RestoreInProgress.TYPE,
+            builder.putCustom(
+                RestoreInProgress.TYPE,
                 new RestoreInProgress.Builder().add(
                     new RestoreInProgress.Entry(
-                        UUIDs.randomBase64UUID(), new Snapshot("repo2", new SnapshotId("snap2", UUIDs.randomBase64UUID())),
+                        UUIDs.randomBase64UUID(),
+                        new Snapshot("repo2", new SnapshotId("snap2", UUIDs.randomBase64UUID())),
                         RestoreInProgress.State.STARTED,
                         Collections.singletonList("index_name"),
                         ImmutableOpenMap.of()
@@ -169,55 +179,87 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
         BytesStreamOutput outStream = new BytesStreamOutput();
         outStream.setVersion(Version.CURRENT);
         diff.writeTo(outStream);
-        StreamInput inStream = new NamedWriteableAwareStreamInput(outStream.bytes().streamInput(),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
+        StreamInput inStream = new NamedWriteableAwareStreamInput(
+            outStream.bytes().streamInput(),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
         diff = ClusterState.readDiffFrom(inStream, newNode("node-name"));
         return diff.apply(original);
     }
 
     public void testObjectReuseWhenApplyingClusterStateDiff() throws Exception {
-        IndexMetadata indexMetadata
-            = IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(10).numberOfReplicas(1).build();
+        IndexMetadata indexMetadata = IndexMetadata.builder("test")
+            .settings(settings(Version.CURRENT))
+            .numberOfShards(10)
+            .numberOfReplicas(1)
+            .build();
         IndexTemplateMetadata indexTemplateMetadata = IndexTemplateMetadata.builder("test-template")
-            .patterns(Arrays.asList(generateRandomStringArray(10, 100, false, false))).build();
+            .patterns(Arrays.asList(generateRandomStringArray(10, 100, false, false)))
+            .build();
         Metadata metadata = Metadata.builder().put(indexMetadata, true).put(indexTemplateMetadata).build();
 
         RoutingTable routingTable = RoutingTable.builder().addAsNew(metadata.index("test")).build();
 
         ClusterState clusterState1 = ClusterState.builder(new ClusterName("clusterName1"))
-            .metadata(metadata).routingTable(routingTable).build();
+            .metadata(metadata)
+            .routingTable(routingTable)
+            .build();
         BytesStreamOutput outStream = new BytesStreamOutput();
         outStream.setVersion(Version.CURRENT);
         clusterState1.writeTo(outStream);
-        StreamInput inStream = new NamedWriteableAwareStreamInput(outStream.bytes().streamInput(),
-            new NamedWriteableRegistry(ClusterModule.getNamedWriteables()));
+        StreamInput inStream = new NamedWriteableAwareStreamInput(
+            outStream.bytes().streamInput(),
+            new NamedWriteableRegistry(ClusterModule.getNamedWriteables())
+        );
         ClusterState serializedClusterState1 = ClusterState.readFrom(inStream, newNode("node4"));
 
         // Create a new, albeit equal, IndexMetadata object
-        ClusterState clusterState2 = ClusterState.builder(clusterState1).incrementVersion()
-            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(1).build(), true)).build();
-        assertNotSame("Should have created a new, equivalent, IndexMetadata object in clusterState2",
-            clusterState1.metadata().index("test"), clusterState2.metadata().index("test"));
+        ClusterState clusterState2 = ClusterState.builder(clusterState1)
+            .incrementVersion()
+            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(1).build(), true))
+            .build();
+        assertNotSame(
+            "Should have created a new, equivalent, IndexMetadata object in clusterState2",
+            clusterState1.metadata().index("test"),
+            clusterState2.metadata().index("test")
+        );
 
         ClusterState serializedClusterState2 = updateUsingSerialisedDiff(serializedClusterState1, clusterState2.diff(clusterState1));
-        assertSame("Unchanged metadata should not create new IndexMetadata objects",
-            serializedClusterState1.metadata().index("test"), serializedClusterState2.metadata().index("test"));
-        assertSame("Unchanged routing table should not create new IndexRoutingTable objects",
-            serializedClusterState1.routingTable().index("test"), serializedClusterState2.routingTable().index("test"));
+        assertSame(
+            "Unchanged metadata should not create new IndexMetadata objects",
+            serializedClusterState1.metadata().index("test"),
+            serializedClusterState2.metadata().index("test")
+        );
+        assertSame(
+            "Unchanged routing table should not create new IndexRoutingTable objects",
+            serializedClusterState1.routingTable().index("test"),
+            serializedClusterState2.routingTable().index("test")
+        );
 
         // Create a new and different IndexMetadata object
-        ClusterState clusterState3 = ClusterState.builder(clusterState1).incrementVersion()
-            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(2).build(), true)).build();
+        ClusterState clusterState3 = ClusterState.builder(clusterState1)
+            .incrementVersion()
+            .metadata(Metadata.builder().put(IndexMetadata.builder(indexMetadata).numberOfReplicas(2).build(), true))
+            .build();
         ClusterState serializedClusterState3 = updateUsingSerialisedDiff(serializedClusterState2, clusterState3.diff(clusterState2));
-        assertNotEquals("Should have a new IndexMetadata object",
-            serializedClusterState2.metadata().index("test"), serializedClusterState3.metadata().index("test"));
-        assertSame("Unchanged routing table should not create new IndexRoutingTable objects",
-            serializedClusterState2.routingTable().index("test"), serializedClusterState3.routingTable().index("test"));
+        assertNotEquals(
+            "Should have a new IndexMetadata object",
+            serializedClusterState2.metadata().index("test"),
+            serializedClusterState3.metadata().index("test")
+        );
+        assertSame(
+            "Unchanged routing table should not create new IndexRoutingTable objects",
+            serializedClusterState2.routingTable().index("test"),
+            serializedClusterState3.routingTable().index("test")
+        );
 
         assertSame("nodes", serializedClusterState2.nodes(), serializedClusterState3.nodes());
         assertSame("blocks", serializedClusterState2.blocks(), serializedClusterState3.blocks());
-        assertSame("template", serializedClusterState2.metadata().templates().get("test-template"),
-            serializedClusterState3.metadata().templates().get("test-template"));
+        assertSame(
+            "template",
+            serializedClusterState2.metadata().templates().get("test-template"),
+            serializedClusterState3.metadata().templates().get("test-template")
+        );
     }
 
     public static class TestCustomOne extends AbstractNamedDiffable<Custom> implements Custom {
@@ -264,7 +306,7 @@ public class ClusterSerializationTests extends ESAllocationTestCase {
 
     }
 
-    public static class TestCustomTwo extends AbstractNamedDiffable<Custom>  implements Custom {
+    public static class TestCustomTwo extends AbstractNamedDiffable<Custom> implements Custom {
 
         public static final String TYPE = "test_custom_two";
         private final Integer intObject;
