@@ -1,7 +1,8 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.core.ssl;
 
@@ -11,8 +12,6 @@ import org.hamcrest.TypeSafeMatcher;
 import org.junit.Assert;
 import org.junit.Before;
 
-import javax.net.ssl.X509ExtendedTrustManager;
-
 import java.io.IOException;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
@@ -20,7 +19,6 @@ import java.nio.file.Path;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.security.GeneralSecurityException;
-import java.security.cert.Certificate;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.util.ArrayList;
@@ -33,7 +31,7 @@ import java.util.Objects;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.test.ESIntegTestCase.inFipsJvm;
+import javax.net.ssl.X509ExtendedTrustManager;
 
 public class RestrictedTrustManagerTests extends ESTestCase {
 
@@ -45,46 +43,52 @@ public class RestrictedTrustManagerTests extends ESTestCase {
     @Before
     public void readCertificates() throws GeneralSecurityException, IOException {
 
-        Certificate[] caCert
-                = CertParsingUtils.readCertificates(Collections.singletonList(getDataPath
-                ("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/ca.crt")));
-        baseTrustManager = CertParsingUtils.trustManager(caCert);
+        final Path caPath = getDataPath("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/ca.crt");
+        baseTrustManager = CertParsingUtils.getTrustManagerFromPEM(List.of(caPath));
         certificates = new HashMap<>();
-        Files.walkFileTree(getDataPath
-                ("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/self-signed"), new SimpleFileVisitor<Path>() {
+        Files.walkFileTree(
+            getDataPath("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/self-signed"),
+            new SimpleFileVisitor<Path>() {
 
-            @Override
-            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                try {
-                    String fileName = file.getFileName().toString();
-                    if (fileName.endsWith(".crt")) {
-                        certificates.put(fileName.replace(".crt", "/self"), CertParsingUtils
-                                .readX509Certificates(Collections.singletonList(file)));
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                    try {
+                        String fileName = file.getFileName().toString();
+                        if (fileName.endsWith(".crt")) {
+                            certificates.put(
+                                fileName.replace(".crt", "/self"),
+                                CertParsingUtils.readX509Certificates(Collections.singletonList(file))
+                            );
+                        }
+                        return FileVisitResult.CONTINUE;
+                    } catch (CertificateException e) {
+                        throw new IOException("Failed to read X.509 Certificate from: " + file.toAbsolutePath().toString());
                     }
-                    return FileVisitResult.CONTINUE;
-                } catch (CertificateException e) {
-                    throw new IOException("Failed to read X.509 Certificate from: " + file.toAbsolutePath().toString());
                 }
             }
-        });
+        );
 
-        Files.walkFileTree(getDataPath
-                ("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/ca-signed"), new SimpleFileVisitor<Path>() {
+        Files.walkFileTree(
+            getDataPath("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/nodes/ca-signed"),
+            new SimpleFileVisitor<Path>() {
 
-            @Override
-            public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                try {
-                    String fileName = file.getFileName().toString();
-                    if (fileName.endsWith(".crt")) {
-                        certificates.put(fileName.replace(".crt", "/ca"), CertParsingUtils
-                                .readX509Certificates(Collections.singletonList(file)));
+                @Override
+                public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+                    try {
+                        String fileName = file.getFileName().toString();
+                        if (fileName.endsWith(".crt")) {
+                            certificates.put(
+                                fileName.replace(".crt", "/ca"),
+                                CertParsingUtils.readX509Certificates(Collections.singletonList(file))
+                            );
+                        }
+                        return FileVisitResult.CONTINUE;
+                    } catch (CertificateException e) {
+                        throw new IOException("Failed to read X.509 Certificate from: " + file.toAbsolutePath().toString());
                     }
-                    return FileVisitResult.CONTINUE;
-                } catch (CertificateException e) {
-                    throw new IOException("Failed to read X.509 Certificate from: " + file.toAbsolutePath().toString());
                 }
             }
-        });
+        );
 
         numberOfClusters = scaledRandomIntBetween(2, 8);
         numberOfNodes = scaledRandomIntBetween(2, 8);
@@ -112,9 +116,7 @@ public class RestrictedTrustManagerTests extends ESTestCase {
     public void testTrustWithRegexCertificateName() throws Exception {
         final int trustedNode = randomIntBetween(1, numberOfNodes);
         final List<String> trustedNames = Collections.singletonList("/node" + trustedNode + ".cluster[0-9].elasticsearch/");
-        final CertificateTrustRestrictions restrictions = new CertificateTrustRestrictions(
-                trustedNames
-        );
+        final CertificateTrustRestrictions restrictions = new CertificateTrustRestrictions(trustedNames);
         final RestrictedTrustManager trustManager = new RestrictedTrustManager(baseTrustManager, restrictions);
         for (int cluster = 1; cluster <= numberOfClusters; cluster++) {
             for (int node = 1; node <= numberOfNodes; node++) {
@@ -134,14 +136,17 @@ public class RestrictedTrustManagerTests extends ESTestCase {
             if (cert.endsWith("/ca")) {
                 assertTrusted(trustManager, cert);
             } else {
-                assertNotValid(trustManager, cert, inFipsJvm() ? "unable to process certificates: Unable to find certificate chain.":
-                    "PKIX path building failed.*");
+                assertNotValid(
+                    trustManager,
+                    cert,
+                    inFipsJvm() ? "unable to process certificates: Unable to find certificate chain." : "PKIX path building failed.*"
+                );
             }
         }
     }
 
     private void assertSingleClusterIsTrusted(int trustedCluster, RestrictedTrustManager trustManager, List<String> trustedNames)
-            throws Exception {
+        throws Exception {
         for (int cluster = 1; cluster <= numberOfClusters; cluster++) {
             for (int node = 1; node <= numberOfNodes; node++) {
                 final String certAlias = "n" + node + ".c" + cluster + "/ca";
