@@ -1,11 +1,11 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.ilm;
 
-import com.carrotsearch.hppc.cursors.ObjectCursor;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.logging.log4j.message.ParameterizedMessage;
@@ -16,32 +16,45 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateApplier;
 import org.elasticsearch.cluster.ClusterStateListener;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.SingleNodeShutdownMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.component.Lifecycle.State;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.unit.TimeValue;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.gateway.GatewayService;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.shard.IndexEventListener;
+import org.elasticsearch.license.XPackLicenseState;
+import org.elasticsearch.plugins.ShutdownAwarePlugin;
+import org.elasticsearch.shutdown.PluginShutdownService;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
 import org.elasticsearch.xpack.core.XPackField;
+import org.elasticsearch.xpack.core.ilm.CheckShrinkReadyStep;
 import org.elasticsearch.xpack.core.ilm.IndexLifecycleMetadata;
 import org.elasticsearch.xpack.core.ilm.LifecycleExecutionState;
 import org.elasticsearch.xpack.core.ilm.LifecyclePolicy;
 import org.elasticsearch.xpack.core.ilm.LifecycleSettings;
 import org.elasticsearch.xpack.core.ilm.OperationMode;
+import org.elasticsearch.xpack.core.ilm.RollupStep;
+import org.elasticsearch.xpack.core.ilm.SetSingleNodeAllocateStep;
+import org.elasticsearch.xpack.core.ilm.ShrinkAction;
 import org.elasticsearch.xpack.core.ilm.ShrinkStep;
+import org.elasticsearch.xpack.core.ilm.ShrunkShardsAllocatedStep;
 import org.elasticsearch.xpack.core.ilm.Step.StepKey;
 import org.elasticsearch.xpack.core.scheduler.SchedulerEngine;
 import org.elasticsearch.xpack.ilm.history.ILMHistoryStore;
 
 import java.io.Closeable;
 import java.time.Clock;
+import java.util.Collection;
 import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.LongSupplier;
+import java.util.stream.Collectors;
 
 import static org.elasticsearch.xpack.core.ilm.IndexLifecycleOriginationDateParser.parseIndexNameAndExtractDate;
 import static org.elasticsearch.xpack.core.ilm.IndexLifecycleOriginationDateParser.shouldParseIndexName;
@@ -50,9 +63,15 @@ import static org.elasticsearch.xpack.core.ilm.IndexLifecycleOriginationDatePars
  * A service which runs the {@link LifecyclePolicy}s associated with indexes.
  */
 public class IndexLifecycleService
-    implements ClusterStateListener, ClusterStateApplier, SchedulerEngine.Listener, Closeable, IndexEventListener {
+    implements
+        ClusterStateListener,
+        ClusterStateApplier,
+        SchedulerEngine.Listener,
+        Closeable,
+        IndexEventListener,
+        ShutdownAwarePlugin {
     private static final Logger logger = LogManager.getLogger(IndexLifecycleService.class);
-    private static final Set<String> IGNORE_STEPS_MAINTENANCE_REQUESTED = Collections.singleton(ShrinkStep.NAME);
+    private static final Set<String> IGNORE_STEPS_MAINTENANCE_REQUESTED = Set.of(ShrinkStep.NAME, RollupStep.NAME);
     private volatile boolean isMaster = false;
     private volatile TimeValue pollInterval;
 
@@ -60,34 +79,58 @@ public class IndexLifecycleService
     private final Clock clock;
     private final PolicyStepsRegistry policyRegistry;
     private final IndexLifecycleRunner lifecycleRunner;
-    private final ILMHistoryStore ilmHistoryStore;
     private final Settings settings;
-    private ClusterService clusterService;
-    private LongSupplier nowSupplier;
+    private final ClusterService clusterService;
+    private final LongSupplier nowSupplier;
     private SchedulerEngine.Job scheduledJob;
 
-    public IndexLifecycleService(Settings settings, Client client, ClusterService clusterService, ThreadPool threadPool, Clock clock,
-                                 LongSupplier nowSupplier, NamedXContentRegistry xContentRegistry,
-                                 ILMHistoryStore ilmHistoryStore) {
+    public IndexLifecycleService(
+        Settings settings,
+        Client client,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        Clock clock,
+        LongSupplier nowSupplier,
+        NamedXContentRegistry xContentRegistry,
+        ILMHistoryStore ilmHistoryStore,
+        XPackLicenseState licenseState
+    ) {
         super();
         this.settings = settings;
         this.clusterService = clusterService;
         this.clock = clock;
         this.nowSupplier = nowSupplier;
         this.scheduledJob = null;
-        this.ilmHistoryStore = ilmHistoryStore;
-        this.policyRegistry = new PolicyStepsRegistry(xContentRegistry, client);
+        this.policyRegistry = new PolicyStepsRegistry(xContentRegistry, client, licenseState);
         this.lifecycleRunner = new IndexLifecycleRunner(policyRegistry, ilmHistoryStore, clusterService, threadPool, nowSupplier);
         this.pollInterval = LifecycleSettings.LIFECYCLE_POLL_INTERVAL_SETTING.get(settings);
         clusterService.addStateApplier(this);
         clusterService.addListener(this);
-        clusterService.getClusterSettings().addSettingsUpdateConsumer(LifecycleSettings.LIFECYCLE_POLL_INTERVAL_SETTING,
-            this::updatePollInterval);
+        clusterService.getClusterSettings()
+            .addSettingsUpdateConsumer(LifecycleSettings.LIFECYCLE_POLL_INTERVAL_SETTING, this::updatePollInterval);
     }
 
     public void maybeRunAsyncAction(ClusterState clusterState, IndexMetadata indexMetadata, StepKey nextStepKey) {
         String policyName = LifecycleSettings.LIFECYCLE_NAME_SETTING.get(indexMetadata.getSettings());
         lifecycleRunner.maybeRunAsyncAction(clusterState, indexMetadata, policyName, nextStepKey);
+    }
+
+    /**
+     * Resolve the given phase, action, and name into a real {@link StepKey}. The phase is always
+     * required, but the action and name are optional. If a name is specified, an action is also required.
+     */
+    public StepKey resolveStepKey(ClusterState state, Index index, String phase, @Nullable String action, @Nullable String name) {
+        if (name == null) {
+            if (action == null) {
+                return this.policyRegistry.getFirstStepForPhase(state, index, phase);
+            } else {
+                return this.policyRegistry.getFirstStepForPhaseAndAction(state, index, phase, action);
+            }
+        } else {
+            assert action != null
+                : "action should never be null because we don't allow constructing a partial step key with only a phase and name";
+            return new StepKey(phase, action, name);
+        }
     }
 
     /**
@@ -104,17 +147,14 @@ public class IndexLifecycleService
         // when moving to an arbitrary step key (to avoid race conditions between the
         // check-and-set). moveClusterStateToStep also does its own validation, but doesn't take
         // the user-input for the current step (which is why we validate here for a passed in step)
-        IndexLifecycleTransition.validateTransition(currentState.getMetadata().index(index),
-            currentStepKey, newStepKey, policyRegistry);
-        return IndexLifecycleTransition.moveClusterStateToStep(index, currentState, newStepKey,
-            nowSupplier, policyRegistry, true);
+        IndexLifecycleTransition.validateTransition(currentState.getMetadata().index(index), currentStepKey, newStepKey, policyRegistry);
+        return IndexLifecycleTransition.moveClusterStateToStep(index, currentState, newStepKey, nowSupplier, policyRegistry, true);
     }
 
     public ClusterState moveClusterStateToPreviouslyFailedStep(ClusterState currentState, String[] indices) {
         ClusterState newState = currentState;
         for (String index : indices) {
-            newState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(newState, index,
-                nowSupplier, policyRegistry, false);
+            newState = IndexLifecycleTransition.moveClusterStateToPreviouslyFailedStep(newState, index, nowSupplier, policyRegistry, false);
         }
         return newState;
     }
@@ -134,8 +174,7 @@ public class IndexLifecycleService
 
             // If we just became master, we need to kick off any async actions that
             // may have not been run due to master rollover
-            for (ObjectCursor<IndexMetadata> cursor : clusterState.metadata().indices().values()) {
-                IndexMetadata idxMeta = cursor.value;
+            for (IndexMetadata idxMeta : clusterState.metadata().indices().values()) {
                 String policyName = LifecycleSettings.LIFECYCLE_NAME_SETTING.get(idxMeta.getSettings());
                 if (Strings.isNullOrEmpty(policyName) == false) {
                     final LifecycleExecutionState lifecycleState = LifecycleExecutionState.fromIndexMetadata(idxMeta);
@@ -144,28 +183,50 @@ public class IndexLifecycleService
                     try {
                         if (OperationMode.STOPPING == currentMode) {
                             if (stepKey != null && IGNORE_STEPS_MAINTENANCE_REQUESTED.contains(stepKey.getName())) {
-                                logger.info("waiting to stop ILM because index [{}] with policy [{}] is currently in step [{}]",
-                                    idxMeta.getIndex().getName(), policyName, stepKey.getName());
+                                logger.info(
+                                    "waiting to stop ILM because index [{}] with policy [{}] is currently in step [{}]",
+                                    idxMeta.getIndex().getName(),
+                                    policyName,
+                                    stepKey.getName()
+                                );
                                 lifecycleRunner.maybeRunAsyncAction(clusterState, idxMeta, policyName, stepKey);
                                 // ILM is trying to stop, but this index is in a Shrink step (or other dangerous step) so we can't stop
                                 safeToStop = false;
                             } else {
-                                logger.info("skipping policy execution of step [{}] for index [{}] with policy [{}]" +
-                                        " because ILM is stopping",
-                                    stepKey == null ? "n/a" : stepKey.getName(), idxMeta.getIndex().getName(), policyName);
+                                logger.info(
+                                    "skipping policy execution of step [{}] for index [{}] with policy [{}]" + " because ILM is stopping",
+                                    stepKey == null ? "n/a" : stepKey.getName(),
+                                    idxMeta.getIndex().getName(),
+                                    policyName
+                                );
                             }
                         } else {
                             lifecycleRunner.maybeRunAsyncAction(clusterState, idxMeta, policyName, stepKey);
                         }
                     } catch (Exception e) {
                         if (logger.isTraceEnabled()) {
-                            logger.warn(new ParameterizedMessage("async action execution failed during master election trigger" +
-                                " for index [{}] with policy [{}] in step [{}], lifecycle state: [{}]",
-                                idxMeta.getIndex().getName(), policyName, stepKey, lifecycleState.asMap()), e);
+                            logger.warn(
+                                new ParameterizedMessage(
+                                    "async action execution failed during master election trigger"
+                                        + " for index [{}] with policy [{}] in step [{}], lifecycle state: [{}]",
+                                    idxMeta.getIndex().getName(),
+                                    policyName,
+                                    stepKey,
+                                    lifecycleState.asMap()
+                                ),
+                                e
+                            );
                         } else {
-                            logger.warn(new ParameterizedMessage("async action execution failed during master election trigger" +
-                                " for index [{}] with policy [{}] in step [{}]",
-                                idxMeta.getIndex().getName(), policyName, stepKey), e);
+                            logger.warn(
+                                new ParameterizedMessage(
+                                    "async action execution failed during master election trigger"
+                                        + " for index [{}] with policy [{}] in step [{}]",
+                                    idxMeta.getIndex().getName(),
+                                    policyName,
+                                    stepKey
+                                ),
+                                e
+                            );
 
                         }
                         // Don't rethrow the exception, we don't want a failure for one index to be
@@ -175,7 +236,10 @@ public class IndexLifecycleService
             }
 
             if (safeToStop && OperationMode.STOPPING == currentMode) {
-                submitOperationModeUpdate(OperationMode.STOPPED);
+                clusterService.submitStateUpdateTask(
+                    "ilm_operation_mode_update[stopped]",
+                    OperationModeUpdateTask.ilmMode(OperationMode.STOPPED)
+                );
             }
         }
     }
@@ -222,6 +286,11 @@ public class IndexLifecycleService
 
     @Override
     public void clusterChanged(ClusterChangedEvent event) {
+        // wait for the cluster state to be recovered so the ILM policies are present
+        if (event.state().blocks().hasGlobalBlock(GatewayService.STATE_NOT_RECOVERED_BLOCK)) {
+            return;
+        }
+
         // Instead of using a LocalNodeMasterListener to track master changes, this service will
         // track them here to avoid conditions where master listener events run after other
         // listeners that depend on what happened in the master listener
@@ -245,8 +314,12 @@ public class IndexLifecycleService
     public void applyClusterState(ClusterChangedEvent event) {
         if (event.localNodeMaster()) { // only act if we are master, otherwise
             // keep idle until elected
-            if (event.state().metadata().custom(IndexLifecycleMetadata.TYPE) != null) {
-                policyRegistry.update(event.state());
+            final IndexLifecycleMetadata ilmMetadata = event.state().metadata().custom(IndexLifecycleMetadata.TYPE);
+            // only update the policy registry if we just became the master node or if the ilm metadata changed
+            if (ilmMetadata != null
+                && (event.previousState().nodes().isLocalNodeElectedMaster() == false
+                    || ilmMetadata != event.previousState().metadata().custom(IndexLifecycleMetadata.TYPE))) {
+                policyRegistry.update(ilmMetadata);
             }
         }
     }
@@ -297,8 +370,7 @@ public class IndexLifecycleService
         // loop through all indices in cluster state and filter for ones that are
         // managed by the Index Lifecycle Service they have a index.lifecycle.name setting
         // associated to a policy
-        for (ObjectCursor<IndexMetadata> cursor : clusterState.metadata().indices().values()) {
-            IndexMetadata idxMeta = cursor.value;
+        for (IndexMetadata idxMeta : clusterState.metadata().indices().values()) {
             String policyName = LifecycleSettings.LIFECYCLE_NAME_SETTING.get(idxMeta.getSettings());
             if (Strings.isNullOrEmpty(policyName) == false) {
                 final LifecycleExecutionState lifecycleState = LifecycleExecutionState.fromIndexMetadata(idxMeta);
@@ -307,8 +379,12 @@ public class IndexLifecycleService
                 try {
                     if (OperationMode.STOPPING == currentMode) {
                         if (stepKey != null && IGNORE_STEPS_MAINTENANCE_REQUESTED.contains(stepKey.getName())) {
-                            logger.info("waiting to stop ILM because index [{}] with policy [{}] is currently in step [{}]",
-                                idxMeta.getIndex().getName(), policyName, stepKey.getName());
+                            logger.info(
+                                "waiting to stop ILM because index [{}] with policy [{}] is currently in step [{}]",
+                                idxMeta.getIndex().getName(),
+                                policyName,
+                                stepKey.getName()
+                            );
                             if (fromClusterStateChange) {
                                 lifecycleRunner.runPolicyAfterStateChange(policyName, idxMeta);
                             } else {
@@ -317,8 +393,12 @@ public class IndexLifecycleService
                             // ILM is trying to stop, but this index is in a Shrink step (or other dangerous step) so we can't stop
                             safeToStop = false;
                         } else {
-                            logger.info("skipping policy execution of step [{}] for index [{}] with policy [{}] because ILM is stopping",
-                                stepKey == null ? "n/a" : stepKey.getName(), idxMeta.getIndex().getName(), policyName);
+                            logger.info(
+                                "skipping policy execution of step [{}] for index [{}] with policy [{}] because ILM is stopping",
+                                stepKey == null ? "n/a" : stepKey.getName(),
+                                idxMeta.getIndex().getName(),
+                                policyName
+                            );
                         }
                     } else {
                         if (fromClusterStateChange) {
@@ -329,13 +409,27 @@ public class IndexLifecycleService
                     }
                 } catch (Exception e) {
                     if (logger.isTraceEnabled()) {
-                        logger.warn(new ParameterizedMessage("async action execution failed during policy trigger" +
-                            " for index [{}] with policy [{}] in step [{}], lifecycle state: [{}]",
-                            idxMeta.getIndex().getName(), policyName, stepKey, lifecycleState.asMap()), e);
+                        logger.warn(
+                            new ParameterizedMessage(
+                                "async action execution failed during policy trigger"
+                                    + " for index [{}] with policy [{}] in step [{}], lifecycle state: [{}]",
+                                idxMeta.getIndex().getName(),
+                                policyName,
+                                stepKey,
+                                lifecycleState.asMap()
+                            ),
+                            e
+                        );
                     } else {
-                        logger.warn(new ParameterizedMessage("async action execution failed during policy trigger" +
-                            " for index [{}] with policy [{}] in step [{}]",
-                            idxMeta.getIndex().getName(), policyName, stepKey), e);
+                        logger.warn(
+                            new ParameterizedMessage(
+                                "async action execution failed during policy trigger" + " for index [{}] with policy [{}] in step [{}]",
+                                idxMeta.getIndex().getName(),
+                                policyName,
+                                stepKey
+                            ),
+                            e
+                        );
 
                     }
                     // Don't rethrow the exception, we don't want a failure for one index to be
@@ -345,7 +439,10 @@ public class IndexLifecycleService
         }
 
         if (safeToStop && OperationMode.STOPPING == currentMode) {
-            submitOperationModeUpdate(OperationMode.STOPPED);
+            clusterService.submitStateUpdateTask(
+                "ilm_operation_mode_update[stopped]",
+                OperationModeUpdateTask.ilmMode(OperationMode.STOPPED)
+            );
         }
     }
 
@@ -353,22 +450,12 @@ public class IndexLifecycleService
     public synchronized void close() {
         // this assertion is here to ensure that the check we use in maybeScheduleJob is accurate for detecting a shutdown in
         // progress, which is that the cluster service is stopped and closed at some point prior to closing plugins
-        assert isClusterServiceStoppedOrClosed() : "close is called by closing the plugin, which is expected to happen after " +
-            "the cluster service is stopped";
+        assert isClusterServiceStoppedOrClosed()
+            : "close is called by closing the plugin, which is expected to happen after " + "the cluster service is stopped";
         SchedulerEngine engine = scheduler.get();
         if (engine != null) {
             engine.stop();
         }
-    }
-
-    public void submitOperationModeUpdate(OperationMode mode) {
-        OperationModeUpdateTask ilmOperationModeUpdateTask;
-        if (mode == OperationMode.STOPPING || mode == OperationMode.STOPPED) {
-            ilmOperationModeUpdateTask = OperationModeUpdateTask.ilmMode(Priority.IMMEDIATE, mode);
-        } else {
-            ilmOperationModeUpdateTask = OperationModeUpdateTask.ilmMode(Priority.NORMAL, mode);
-        }
-        clusterService.submitStateUpdateTask("ilm_operation_mode_update {OperationMode " + mode.name() + "}", ilmOperationModeUpdateTask);
     }
 
     /**
@@ -378,5 +465,78 @@ public class IndexLifecycleService
     private boolean isClusterServiceStoppedOrClosed() {
         final State state = clusterService.lifecycleState();
         return state == State.STOPPED || state == State.CLOSED;
+    }
+
+    // visible for testing
+    PolicyStepsRegistry getPolicyRegistry() {
+        return policyRegistry;
+    }
+
+    static Set<String> indicesOnShuttingDownNodesInDangerousStep(ClusterState state, String nodeId) {
+        final Set<String> shutdownNodes = PluginShutdownService.shutdownTypeNodes(
+            state,
+            SingleNodeShutdownMetadata.Type.REMOVE,
+            SingleNodeShutdownMetadata.Type.REPLACE
+        );
+        if (shutdownNodes.isEmpty()) {
+            return Collections.emptySet();
+        }
+
+        Set<String> indicesPreventingShutdown = state.metadata()
+            .indices()
+            .stream()
+            // Filter out to only consider managed indices
+            .filter(
+                indexToMetadata -> Strings.hasText(LifecycleSettings.LIFECYCLE_NAME_SETTING.get(indexToMetadata.getValue().getSettings()))
+            )
+            // Only look at indices in the shrink action
+            .filter(
+                indexToMetadata -> ShrinkAction.NAME.equals(
+                    LifecycleExecutionState.fromIndexMetadata(indexToMetadata.getValue()).getAction()
+                )
+            )
+            // Only look at indices on a step that may potentially be dangerous if we removed the node
+            .filter(indexToMetadata -> {
+                String step = LifecycleExecutionState.fromIndexMetadata(indexToMetadata.getValue()).getStep();
+                return SetSingleNodeAllocateStep.NAME.equals(step)
+                    || CheckShrinkReadyStep.NAME.equals(step)
+                    || ShrinkStep.NAME.equals(step)
+                    || ShrunkShardsAllocatedStep.NAME.equals(step);
+            })
+            // Only look at indices where the node picked for the shrink is the node marked as shutting down
+            .filter(indexToMetadata -> {
+                String nodePicked = indexToMetadata.getValue()
+                    .getSettings()
+                    .get(IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getKey() + "_id");
+                return nodeId.equals(nodePicked);
+            })
+            .map(Map.Entry::getKey)
+            .collect(Collectors.toSet());
+        logger.trace(
+            "with nodes marked as shutdown for removal {}, indices {} are preventing shutdown",
+            shutdownNodes,
+            indicesPreventingShutdown
+        );
+        return indicesPreventingShutdown;
+    }
+
+    @Override
+    public boolean safeToShutdown(String nodeId, SingleNodeShutdownMetadata.Type shutdownType) {
+        switch (shutdownType) {
+            case RESTART:
+                // It is safe to restart during ILM operation
+                return true;
+            case REPLACE:
+            case REMOVE:
+                Set<String> indices = indicesOnShuttingDownNodesInDangerousStep(clusterService.state(), nodeId);
+                return indices.isEmpty();
+            default:
+                throw new IllegalArgumentException("unknown shutdown type: " + shutdownType);
+        }
+    }
+
+    @Override
+    public void signalShutdown(Collection<String> shutdownNodeIds) {
+        // TODO: in the future we could take proactive measures for when a shutdown is actually triggered
     }
 }
