@@ -1,33 +1,38 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License;
- * you may not use this file except in compliance with the Elastic License.
+ * or more contributor license agreements. Licensed under the Elastic License
+ * 2.0; you may not use this file except in compliance with the Elastic License
+ * 2.0.
  */
 package org.elasticsearch.xpack.security.transport.nio;
 
-import org.elasticsearch.bootstrap.JavaVersion;
+import org.elasticsearch.jdk.JavaVersion;
 import org.elasticsearch.nio.FlushOperation;
 import org.elasticsearch.nio.InboundChannelBuffer;
 import org.elasticsearch.nio.Page;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.xpack.core.ssl.CertParsingUtils;
-import org.elasticsearch.xpack.core.ssl.PemUtils;
+import org.hamcrest.Matcher;
+
+import java.io.IOException;
+import java.nio.Buffer;
+import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
+import java.security.SecureRandom;
+import java.util.Arrays;
+import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.IntFunction;
 
 import javax.net.ssl.KeyManager;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLEngine;
 import javax.net.ssl.SSLException;
 import javax.net.ssl.TrustManager;
-import java.io.IOException;
-import java.nio.Buffer;
-import java.nio.ByteBuffer;
-import java.nio.charset.StandardCharsets;
-import java.security.SecureRandom;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.IntFunction;
+
+import static org.hamcrest.Matchers.anyOf;
+import static org.hamcrest.Matchers.is;
 
 public class SSLDriverTests extends ESTestCase {
 
@@ -46,13 +51,13 @@ public class SSLDriverTests extends ESTestCase {
 
         handshake(clientDriver, serverDriver);
 
-        ByteBuffer[] buffers = {ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers = { ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8)) };
         sendAppData(clientDriver, buffers);
         serverDriver.read(networkReadBuffer, applicationBuffer);
         assertEquals(ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8)), applicationBuffer.sliceBuffersTo(4)[0]);
         applicationBuffer.release(4);
 
-        ByteBuffer[] buffers2 = {ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers2 = { ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)) };
         sendAppData(serverDriver, buffers2);
         clientDriver.read(networkReadBuffer, applicationBuffer);
         assertEquals(ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)), applicationBuffer.sliceBuffersTo(4)[0]);
@@ -69,7 +74,7 @@ public class SSLDriverTests extends ESTestCase {
 
         handshake(clientDriver, serverDriver);
 
-        ByteBuffer[] buffers = {ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers = { ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8)) };
         serverDriver.write(new FlushOperation(buffers, (v, e) -> {}));
 
         expectThrows(SSLException.class, serverDriver::close);
@@ -77,24 +82,23 @@ public class SSLDriverTests extends ESTestCase {
     }
 
     public void testRenegotiate() throws Exception {
-        assumeFalse("BCTLS doesn't support renegotiation: https://github.com/bcgit/bc-java/issues/593#issuecomment-533518845",
-            inFipsJvm());
+        assumeFalse("BCTLS doesn't support renegotiation: https://github.com/bcgit/bc-java/issues/593#issuecomment-533518845", inFipsJvm());
         SSLContext sslContext = getSSLContext();
 
         SSLEngine serverEngine = sslContext.createSSLEngine();
         SSLEngine clientEngine = sslContext.createSSLEngine();
 
         // Lock the protocol to 1.2 as 1.3 does not support renegotiation
-        String[] serverProtocols = {"TLSv1.2"};
+        String[] serverProtocols = { "TLSv1.2" };
         serverEngine.setEnabledProtocols(serverProtocols);
-        String[] clientProtocols = {"TLSv1.2"};
+        String[] clientProtocols = { "TLSv1.2" };
         clientEngine.setEnabledProtocols(clientProtocols);
         SSLDriver clientDriver = getDriver(clientEngine, true);
         SSLDriver serverDriver = getDriver(serverEngine, false);
 
         handshake(clientDriver, serverDriver);
 
-        ByteBuffer[] buffers = {ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers = { ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8)) };
         sendAppData(clientDriver, buffers);
         serverDriver.read(networkReadBuffer, applicationBuffer);
         assertEquals(ByteBuffer.wrap("ping".getBytes(StandardCharsets.UTF_8)), applicationBuffer.sliceBuffersTo(4)[0]);
@@ -104,7 +108,7 @@ public class SSLDriverTests extends ESTestCase {
         assertFalse(clientDriver.readyForApplicationData());
 
         // This tests that the client driver can still receive data based on the prior handshake
-        ByteBuffer[] buffers2 = {ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers2 = { ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)) };
         sendAppData(serverDriver, buffers2);
         clientDriver.read(networkReadBuffer, applicationBuffer);
         assertEquals(ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)), applicationBuffer.sliceBuffersTo(4)[0]);
@@ -137,7 +141,7 @@ public class SSLDriverTests extends ESTestCase {
             buffer.put((byte) (i % 127));
         }
         buffer.flip();
-        ByteBuffer[] buffers = {buffer};
+        ByteBuffer[] buffers = { buffer };
         sendAppData(clientDriver, buffers);
         serverDriver.read(networkReadBuffer, applicationBuffer);
         ByteBuffer[] buffers1 = applicationBuffer.sliceBuffersFrom(0);
@@ -145,7 +149,7 @@ public class SSLDriverTests extends ESTestCase {
         assertEquals((byte) (32767 % 127), buffers1[1].get(16383));
         applicationBuffer.release(1 << 15);
 
-        ByteBuffer[] buffers2 = {ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8))};
+        ByteBuffer[] buffers2 = { ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)) };
         sendAppData(serverDriver, buffers2);
         clientDriver.read(networkReadBuffer, applicationBuffer);
         assertEquals(ByteBuffer.wrap("pong".getBytes(StandardCharsets.UTF_8)), applicationBuffer.sliceBuffersTo(4)[0]);
@@ -159,25 +163,53 @@ public class SSLDriverTests extends ESTestCase {
         SSLEngine clientEngine = sslContext.createSSLEngine();
         SSLEngine serverEngine = sslContext.createSSLEngine();
 
-        String[] serverProtocols = {"TLSv1.2"};
+        final String[] serverProtocols;
+        final String[] clientProtocols;
+        final Matcher<String> expectedMessageMatcher;
+
+        if (inFipsJvm()) {
+            // fips JSSE does not support TLSv1.3 yet
+            serverProtocols = new String[] { "TLSv1.2" };
+            clientProtocols = new String[] { "TLSv1.1" };
+            expectedMessageMatcher = is("org.bouncycastle.tls.TlsFatalAlert: protocol_version(70)");
+        } else if (JavaVersion.current().compareTo(JavaVersion.parse("16")) >= 0) {
+            // JDK16 https://jdk.java.net/16/release-notes does not permit protocol TLSv1.1 OOB
+            serverProtocols = new String[] { "TLSv1.3" };
+            clientProtocols = new String[] { "TLSv1.2" };
+            expectedMessageMatcher = is("The client supported protocol versions [TLSv1.2] are not accepted by server preferences [TLS13]");
+        } else {
+            serverProtocols = new String[] { "TLSv1.2" };
+            clientProtocols = new String[] { "TLSv1.1" };
+            expectedMessageMatcher = anyOf(
+                is("No appropriate protocol (protocol is disabled or cipher suites are inappropriate)"),
+                is("The client supported protocol versions [TLSv1.1] are not accepted by server preferences [TLS12]")
+            );
+        }
+
         serverEngine.setEnabledProtocols(serverProtocols);
-        String[] clientProtocols = {"TLSv1.1"};
         clientEngine.setEnabledProtocols(clientProtocols);
         SSLDriver clientDriver = getDriver(clientEngine, true);
         SSLDriver serverDriver = getDriver(serverEngine, false);
 
         SSLException sslException = expectThrows(SSLException.class, () -> handshake(clientDriver, serverDriver));
-        String oldExpected = "Client requested protocol TLSv1.1 not enabled or not supported";
-        String jdk11Expected = "The client supported protocol versions [TLSv1.1] are not accepted by server preferences [TLS12]";
-        String bctlsExpected = "org.bouncycastle.tls.TlsFatalAlert: protocol_version(70)";
-        boolean expectedMessage = oldExpected.equals(sslException.getMessage()) || jdk11Expected.equals(sslException.getMessage())
-            || bctlsExpected.equals(sslException.getMessage());
-        assertTrue("Unexpected exception message: " + sslException.getMessage(), expectedMessage);
+        assertThat(sslException.getMessage(), expectedMessageMatcher);
 
         // Prior to JDK11 we still need to send a close alert
         if (serverDriver.isClosed() == false) {
-            failedCloseAlert(serverDriver, clientDriver, Arrays.asList("Received fatal alert: protocol_version",
-                "Received fatal alert: handshake_failure"));
+            if (false == inFipsJvm() && false == serverDriver.getOutboundBuffer().hasEncryptedBytesToFlush()) {
+                serverDriver.getSSLEngine().closeInbound();
+                serverDriver.getSSLEngine().closeOutbound();
+                serverDriver.close();
+                assertTrue(serverDriver.isClosed());
+                clientDriver.close();
+                assertTrue(clientDriver.isClosed());
+            } else {
+                failedCloseAlert(
+                    serverDriver,
+                    clientDriver,
+                    Arrays.asList("Received fatal alert: protocol_version", "Received fatal alert: handshake_failure")
+                );
+            }
         }
     }
 
@@ -198,15 +230,16 @@ public class SSLDriverTests extends ESTestCase {
 
         // Prior to JDK11 we still need to send a close alert
         if (serverDriver.isClosed() == false) {
-            List<String> messages = Arrays.asList("Received fatal alert: handshake_failure",
-                "Received close_notify during handshake");
+            List<String> messages = Arrays.asList("Received fatal alert: handshake_failure", "Received close_notify during handshake");
             failedCloseAlert(serverDriver, clientDriver, messages);
         }
     }
 
     public void testCloseDuringHandshakeJDK11() throws Exception {
-        assumeTrue("this tests ssl engine for JDK11",
-            JavaVersion.current().compareTo(JavaVersion.parse("11")) >= 0 && inFipsJvm() == false);
+        assumeTrue(
+            "this tests ssl engine for JDK11",
+            JavaVersion.current().compareTo(JavaVersion.parse("11")) >= 0 && inFipsJvm() == false
+        );
         SSLContext sslContext = getSSLContext();
         SSLDriver clientDriver = getDriver(sslContext.createSSLEngine(), true);
         SSLDriver serverDriver = getDriver(sslContext.createSSLEngine(), false);
@@ -285,20 +318,20 @@ public class SSLDriverTests extends ESTestCase {
         sendDriver.close();
 
         SSLException sslException = expectThrows(SSLException.class, () -> receiveDriver.read(networkReadBuffer, applicationBuffer));
-        assertTrue("Expected one of the following exception messages: " + messages + ". Found: " + sslException.getMessage(),
-            messages.stream().anyMatch(m -> sslException.getMessage().equals(m)));
+        assertTrue(
+            "Expected one of the following exception messages: " + messages + ". Found: " + sslException.getMessage(),
+            messages.stream().anyMatch(m -> sslException.getMessage().equals(m))
+        );
         assertTrue(receiveDriver.isClosed());
         receiveDriver.close();
     }
 
     private SSLContext getSSLContext() throws Exception {
-        String certPath = "/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testclient.crt";
-        String keyPath = "/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testclient.pem";
+        final Path certPath = getDataPath("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testclient.crt");
+        final Path keyPath = getDataPath("/org/elasticsearch/xpack/security/transport/ssl/certs/simple/testclient.pem");
         SSLContext sslContext;
-        TrustManager tm = CertParsingUtils.trustManager(CertParsingUtils.readCertificates(Collections.singletonList(getDataPath
-            (certPath))));
-        KeyManager km = CertParsingUtils.keyManager(CertParsingUtils.readCertificates(Collections.singletonList(getDataPath
-            (certPath))), PemUtils.readPrivateKey(getDataPath(keyPath), "testclient"::toCharArray), "testclient".toCharArray());
+        TrustManager tm = CertParsingUtils.getTrustManagerFromPEM(List.of(certPath));
+        KeyManager km = CertParsingUtils.getKeyManagerFromPEM(certPath, keyPath, "testclient".toCharArray());
         sslContext = SSLContext.getInstance(inFipsJvm() ? "TLSv1.2" : randomFrom("TLSv1.2", "TLSv1.3"));
         sslContext.init(new KeyManager[] { km }, new TrustManager[] { tm }, new SecureRandom());
         return sslContext;
@@ -371,7 +404,6 @@ public class SSLDriverTests extends ESTestCase {
             assertTrue(serverDriver.readyForApplicationData());
         }
 
-
     }
 
     private void sendHandshakeMessages(SSLDriver sendDriver, SSLDriver receiveDriver) throws IOException {
@@ -398,7 +430,7 @@ public class SSLDriverTests extends ESTestCase {
         int bytesToCopy = Arrays.stream(writeBuffers).mapToInt(Buffer::remaining).sum();
         networkReadBuffer.ensureCapacity(bytesToCopy + networkReadBuffer.getIndex());
         ByteBuffer[] byteBuffers = networkReadBuffer.sliceBuffersFrom(0);
-        assert  writeBuffers.length > 0 : "No write buffers";
+        assert writeBuffers.length > 0 : "No write buffers";
 
         int r = 0;
         while (flushOperation.isFullyFlushed() == false) {
